[tool.poetry]
name = "plex"
version = "0.1.0"
description = ""
authors = ["Krytos <kmeinon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"
httpx = "^0.23.3"
jupyter = "^1.0.0"
stripe = "^5.1.1"
plexapi = "^4.13.2"
ipython = "^8.10.0"
aiohttp = "^3.8.4"
pytelegrambotapi = "^4.10.0"
pytest = "^7.2.1"
python-dotenv = "^0.21.1"
pymongo = "^4.3.3"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
